# TodoList

./: .gitignore  README.md  pyproject.toml
todolist/: main.py
todolist/cli/: menu.py
todolist/core/entities/: project.py  task.py
todolist/core/exceptions/: invalid_entity.py  limit_exceeded.py
todolist/core/services/: project_service.py  task_service.py
todolist/core/validators/: project_validator.py  task_validator.py
todolist/storage/: memory_storage.py
todolist/utils/: env_loader.py  formatter.py
